<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arcana_cpp</name>
  <version>0.1.0</version>
  <description>CPP utils for the arcana package</description>

  <maintainer email="github@meltwin.fr">Meltwin</maintainer>
  <author email="github@meltwin.fr">Meltwin</author>

  <url type="repository">https://github.com/Baxterminator/ros_arcana</url>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>lifecycle_msgs</depend>
  <depend>arcana_cmake</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>