<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arcana_python</name>
  <version>0.1.0</version>
  <description>Python toolkit aiming to ease ROS projects compilation</description>

  <maintainer email="contact@meltwin.fr">Meltwin</maintainer>
  <author email="contact@meltwin.fr">Meltwin</author>

  <url type="repository">https://github.com/Baxterminator/ros_arcana</url>
  <license>MIT</license>

  <build_depend>arcana_cmake</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>