<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arcana_tools</name>
  <version>0.1.0</version>
  <description>ROS2 tools</description>

  <maintainer email="github@meltwin.fr">Meltwin</maintainer>
  <author email="github@meltwin.fr">Meltwin</author>

  <url type="repository">https://github.com/Baxterminator/ros_arcana</url>
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>arcana_cpp</depend>
  <build_depend>arcana_cmake</build_depend>

  <depend>tf2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>